@@ -10,7 +10,7 @@ html {
 
 body { margin: 0; padding: 0; }
 
-/* The html tag has these classes and attributes too. */
+/* the html tag has these classes and attributes too */
 body.normal {}
 body.console {}
 body[type=channel] {}
@@ -21,6 +21,7 @@ body[channelname=#limechat] {}
 hr { margin: 0.5em 2em; }
 a {}
 
+/* log lines */
 .line { margin: 0 -4px; padding: 0 4px 1px 4px; }
 .line[alternate=even] {}
 .line[alternate=odd] {}
@@ -38,6 +39,7 @@ a {}
 .time { color: #048; }
 .place { color: #008; }
 
+/* nickname for text messages */
 .sender[type=myself] { color: #66a; }
 .sender[type=normal] { color: #008; }
 .sender[type=normal][colornumber='0'] {}
@@ -57,6 +59,7 @@ a {}
 .sender[type=normal][colornumber='14'] {}
 .sender[type=normal][colornumber='15'] {}
 
+/* message body */
 .message[type=system] { color: #080; }
 .message[type=error] { color: #f00; font-weight: bold; }
 .message[type=reply] { color: #088; }
@@ -78,3 +81,37 @@ a {}
 .message[type=wallops] { color: #080; }
 .message[type=debug_send] { color: #aaa; }
 .message[type=debug_receive] { color: #444; }
+
+/* colors for mIRC color effects */
+.effect[color-number='0'] {}
+.effect[color-number='1'] {}
+.effect[color-number='2'] {}
+.effect[color-number='3'] {}
+.effect[color-number='4'] {}
+.effect[color-number='5'] {}
+.effect[color-number='6'] {}
+.effect[color-number='7'] {}
+.effect[color-number='8'] {}
+.effect[color-number='9'] {}
+.effect[color-number='10'] {}
+.effect[color-number='11'] {}
+.effect[color-number='12'] {}
+.effect[color-number='13'] {}
+.effect[color-number='14'] {}
+.effect[color-number='15'] {}
+.effect[bgcolor-number='0'] {}
+.effect[bgcolor-number='1'] {}
+.effect[bgcolor-number='2'] {}
+.effect[bgcolor-number='3'] {}
+.effect[bgcolor-number='4'] {}
+.effect[bgcolor-number='5'] {}
+.effect[bgcolor-number='6'] {}
+.effect[bgcolor-number='7'] {}
+.effect[bgcolor-number='8'] {}
+.effect[bgcolor-number='9'] {}
+.effect[bgcolor-number='10'] {}
+.effect[bgcolor-number='11'] {}
+.effect[bgcolor-number='12'] {}
+.effect[bgcolor-number='13'] {}
+.effect[bgcolor-number='14'] {}
+.effect[bgcolor-number='15'] {}
