@@ -550,6 +550,39 @@ class LogController < NSObject
     .message[type=wallops] { color: #080; }
     .message[type=debug_send] { color: #aaa; }
     .message[type=debug_receive] { color: #444; }
+    
+    .effect[color-number='0'] { color: #fff; }
+    .effect[color-number='1'] { color: #000; }
+    .effect[color-number='2'] { color: #008; }
+    .effect[color-number='3'] { color: #080; }
+    .effect[color-number='4'] { color: #f00; }
+    .effect[color-number='5'] { color: #800; }
+    .effect[color-number='6'] { color: #808; }
+    .effect[color-number='7'] { color: #f80; }
+    .effect[color-number='8'] { color: #ff0; }
+    .effect[color-number='9'] { color: #0f0; }
+    .effect[color-number='10'] { color: #088; }
+    .effect[color-number='11'] { color: #0ff; }
+    .effect[color-number='12'] { color: #00f; }
+    .effect[color-number='13'] { color: #f0f; }
+    .effect[color-number='14'] { color: #888; }
+    .effect[color-number='15'] { color: #ccc; }
+    .effect[bgcolor-number='0'] { background-color: #fff; }
+    .effect[bgcolor-number='1'] { background-color: #000; }
+    .effect[bgcolor-number='2'] { background-color: #008; }
+    .effect[bgcolor-number='3'] { background-color: #080; }
+    .effect[bgcolor-number='4'] { background-color: #f00; }
+    .effect[bgcolor-number='5'] { background-color: #800; }
+    .effect[bgcolor-number='6'] { background-color: #808; }
+    .effect[bgcolor-number='7'] { background-color: #f80; }
+    .effect[bgcolor-number='8'] { background-color: #ff0; }
+    .effect[bgcolor-number='9'] { background-color: #0f0; }
+    .effect[bgcolor-number='10'] { background-color: #088; }
+    .effect[bgcolor-number='11'] { background-color: #0ff; }
+    .effect[bgcolor-number='12'] { background-color: #00f; }
+    .effect[bgcolor-number='13'] { background-color: #f0f; }
+    .effect[bgcolor-number='14'] { background-color: #888; }
+    .effect[bgcolor-number='15'] { background-color: #ccc; }
   EOM
 end
 
